--- a/credit_risk_ensemble.ipynb
+++ b/credit_risk_ensemble.ipynb
@@ -980,23 +980,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9316600714093861"
+       "0.925427358175101"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Calculated the balanced accuracy score\n",
-    "y_pred = balanced_random.predict(X_test)\n",
+    "y_pred = easy_ensemble.predict(X_test)\n",
     "\n",
     "from sklearn.metrics import balanced_accuracy_score\n",
     "\n",
@@ -1005,29 +1005,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[   93,     8],\n",
-       "       [  983, 16121]])"
+       "array([[   79,     8],\n",
+       "       [  979, 16139]], dtype=int64)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Display the confusion matrix\n",
-    "# YOUR CODE HERE"
+    "from sklearn.metrics import confusion_matrix\n",
+    "confusion_matrix(y_test, y_pred)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1036,17 +1037,19 @@
      "text": [
       "                   pre       rec       spe        f1       geo       iba       sup\n",
       "\n",
-      "  high_risk       0.09      0.92      0.94      0.16      0.93      0.87       101\n",
-      "   low_risk       1.00      0.94      0.92      0.97      0.93      0.87     17104\n",
+      "  high_risk       0.07      0.91      0.94      0.14      0.93      0.85        87\n",
+      "   low_risk       1.00      0.94      0.91      0.97      0.93      0.86     17118\n",
       "\n",
-      "avg / total       0.99      0.94      0.92      0.97      0.93      0.87     17205\n",
+      "avg / total       0.99      0.94      0.91      0.97      0.93      0.86     17205\n",
       "\n"
      ]
     }
    ],
    "source": [
     "# Print the imbalanced classification report\n",
-    "# YOUR CODE HERE"
+    "from imblearn.metrics import classification_report_imbalanced\n",
+    "\n",
+    "print(classification_report_imbalanced(y_test, y_pred))"
    ]
   },
   {
